--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,10 @@ body {
     width: 100%;
     height: 100%;
     z-index: -10;
-    opacity: 0.7;
-    background-image: url("bg5.jpg");
+    opacity: 0.8;
+    transform: scaleX(-1);
+    background-image: url("bg3.jpg");
+    dbackground-image: url("bg4.jpg");
     background-repeat: no-repeat;
     background-position: 50% 0;
     -ms-background-size: cover;
@@ -41,6 +43,7 @@ body {
     margin:0;
     display:flex;
     align-items:flex-end;
+    opacity:0.7;
     background-color:#fff;
 }
 
@@ -97,6 +100,7 @@ a:hover {
 
 #bccontentright {
     flex-shrink:2;
+    dorder:-1;
 }
 
 #bccontentright #mc_embed_signup {
