--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-h1 {display:none;}
+h1 {
+    display:none;
+}
 
 body {
     margin:0;
@@ -6,6 +8,9 @@ body {
 }
 
 #bccontent {
+    padding:0.5em;
+    max-width:1200px;
+    margin:auto;
 }
 
 #bccontent:before {
@@ -17,12 +22,10 @@ body {
     width: 100%;
     height: 100%;
     z-index: -10;
-    opacity: 0.8;
-    transform: scaleX(-1);
-    background-image: url("bg3.jpg");
-    dbackground-image: url("bg4.jpg");
+    opacity: 0.5;
+    background-image: url("bg.jpg");
     background-repeat: no-repeat;
-    background-position: 50% 0;
+    background-position: 30% 20%;
     -ms-background-size: cover;
     -o-background-size: cover;
     -moz-background-size: cover;
@@ -38,20 +41,19 @@ body {
 
 #bcmenu {
     order:-1;
-    border-bottom:1px solid #115;
+    border-bottom:1px solid #511;
     padding:0;
     margin:0;
     display:flex;
     align-items:flex-end;
-    opacity:0.7;
-    background-color:#fff;
+    background-color:rgba(255,255,255,0.5);
 }
 
 #bcmenu span {
-    padding:0.3em;
+    padding:0.1em;
     padding-right:1.5em;
     margin:0;
-    font-size:22px;
+    font-size:18px;
     font-family: Open Sans, Sans Serif;
     text-shadow: 0px 0px 10px #fff;
     color:#113;
@@ -70,12 +72,21 @@ a:hover {
 #bccontenttop {
     margin:1em;
     margin-top:1.5em;
-    font-size:22px;
+    font-size:18px;
     font-family: Open Sans, Sans Serif;
     text-shadow: 0px 0px 10px #fff;
     line-height:1.5em;
     color:#113;
     margin-bottom:0;
+}
+
+#bccontenttop {
+    display:flex;
+    justify-content:space-between;
+}
+
+#bccontenttop p {
+    width:48%;
 }
 
 #bcmail {
@@ -87,20 +98,26 @@ a:hover {
 }
 
 #bccontentleft {
-    font-size:20px;
-    flex-grow: 2;
-    flex-shrink:2;
+    font-size:18px;
+    flex: 1 1 100%;
     margin:1em;
     font-family: Open Sans, Sans Serif;
     text-shadow: 0px 0px 10px #fff;
     line-height:1.5em;
-    color:#000;
+    color:#113;
     margin-top:0;
+    margin-bottom:0;
+    padding-bottom:0;
+}
+
+ul {
+    margin-bottom:0;
 }
 
 #bccontentright {
-    flex-shrink:2;
-    dorder:-1;
+    flex: 1 2 100%;
+    min-width:350px;
+    line-height:1.5em;
 }
 
 #bccontentright #mc_embed_signup {
@@ -108,12 +125,29 @@ a:hover {
     margin:1em;
     margin-right:2em;
     padding:1em;
-    padding-right:2em;
-    padding-left:2em;
+    padding-top:1em;
+    padding-bottom:0.5em;
+    padding-right:1.5em;
+    padding-left:1.5em;
     font-family: Open Sans, Sans Serif;
     line-height:1.5em;
     color:#113;
-    border-radius:10px;
+    border-radius:5px;
+    border:1px solid #90b4fc;
+}
+
+#bccontentright #mc_embed_signup:hover {
+    border:1px solid #5882d6;
+}
+
+p {
+    text-align:justify;
+    margin-top:0.5em;
+    margin-bottom:0.5em;
+}
+
+li {
+    text-align:justify;
 }
 
 #bccontentright #mc-embedded-subscribe-form {
@@ -131,9 +165,108 @@ li {
 }
 
 #bcfooter {
+    font-size:18px;
+    font-family: Open Sans, Sans Serif;
+    text-shadow: 0px 0px 10px #fff;
+    color:#113;
+    padding-right:2em;
+    padding-top:1.5em;
+    padding-bottom:1em;
+    text-align:right;
+}
+
+#bccontentright #mc-embedded-subscribe {
     font-size:20px;
     font-family: Open Sans, Sans Serif;
-    dtext-shadow: 0px 0px 10px #fff;
-    color:#000;
-    padding:1em;
+    font-weight:700;
+    letter-spacing:2px;
+    margin-top:0.5em;
+    background-color:#92db48;
+    height:38px;
+    color:#311;
+    border:1px solid #65b033;
+}
+
+#bccontentright #mc-embedded-subscribe:hover, #bccontentright #mc-embedded-subscribe:focus {
+    border:1px solid #311;
+}
+
+#bccontentright input:hover, #bccontentright input:focus {
+    border:1px solid #311;
+}
+
+label {
+    font-size:18px;
+    font-family: Open Sans, Sans Serif;
+}
+
+#bcsmall {
+    font-size:18px;
+    font-family: Open Sans, Sans Serif;
+    text-shadow: 0px 0px 10px #fff;
+    color:#113;
+    display:none;
+}
+
+@media (max-width: 768px) { 
+#bccontentmiddle {
+    flex-direction: column;
+}
+#bccontenttop {
+    flex-direction: column;
+    margin:0;
+}
+#bccontentleft {
+    margin:0;
+}
+#bccontenttop p {
+    width:100%;
+}
+#bcsmall {
+    display:block;
+}
+#bcmail {
+    display:none;
+}
+#bccontentright #mc_embed_signup {
+    margin:auto;
+}
+#bcfooter{
+    font-size:16px;
+    padding:1em;;
+}
+
+}
+
+@media (max-width: 480px) { 
+#bccontent {
+    padding:0.5em;
+}
+#bccontenttop, #bccontentright, #bccontentleft, #bccontentright #mc_embed_signup {
+    font-size:14px;
+}
+#bccontentright{
+    min-width:50px;
+}
+#bcsmall {
+    font-size:16px;
+}
+#bcfooter{
+    font-size:14px;
+}
+label, input {
+    font-size:14px;
+}
+}
+
+input {
+    font-size:16px;
+    font-family: Open Sans, Sans Serif;
+    padding-top: 3px !important;
+    padding-bottom: 3px !important;
+    margin:0em;
+}
+
+i.fa-li {
+    margin-top:2px !important;
 }
